--- a/style.css
+++ b/style.css
@@ -45,9 +45,7 @@
   opacity: 0;
   animation: slideTop .5s ease forwards;
   animation-delay: calc(0.2s * var(--i));
- 
  }
-
  .home-content h3{
  font-size: 32px;
  font-weight: 700;
@@ -60,9 +58,6 @@
  animation: slideTop 1s ease forwards;
  animation-delay:.7s;
  }
- /*.home-content h3 span{
- color: rgb(226, 24, 41);
- }*/
  .home-content h1{
  font-size: 56px;
  margin: -4px 0;
@@ -93,10 +88,8 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 18px 8% 18px 1%;
-      z-index: 2;
+    z-index: 2;
   }
-  
-  
   /*Intro I am a Front end Web Developer*/
   span {
     background: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
@@ -118,7 +111,7 @@ nav {
    nav ul li a:hover{
     color: #d4fc79;
    }
-   /*Buttons-----------------------------------------------------------------------------------------------------------------------------*/
+   /*BTN-----------------------------------------------------------------------------------------------------------------------------*/
   .btn:hover{
     transform: scale(1.2);
     background-image: linear-gradient(to top, #96fbc4 0%, #f9f586 100%);
@@ -193,8 +186,8 @@ nav {
     }
     
   
-  /*------------------------------------------------------BTN-------------------------------------------------------------*/
-  .content{
+  /*------------------------------------------------------Content------------------------------------------------------------*/
+  .left{
     position: absolute;
     top: 50%;
     left: 8%;
@@ -214,17 +207,22 @@ nav {
     margin-bottom: 50px;
   }
   h4 {
-    background: -webkit-linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+    background: -webkit-linear-gradient(120deg, #f1f6e6 0%, #96e6a1 100%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     letter-spacing: 2px;
     font-size: 20px;
   }
+ .peony{
+    width: 100%;
+    max-width: 700px;
+    margin-top: 50px;
+    margin-left:50%;
 
+  }
 
-  /*Glowing-------------------------------------------------------*/
-/*
+  /*Glowing-------------------------------------------------------
    .glowing {
      position: absolute;
      min-width: 150px;
@@ -233,7 +231,7 @@ nav {
      transform-origin: right ;
      animation:colorChange 10s linear infinite;
    }
-*/
+
 .glowing {
   margin:0;
   padding: 0;
@@ -324,7 +322,6 @@ nav {
     0%  { filter: hue-rotate(0deg); transform: rotate(0deg);}
     100%{ filter: hue-rotate(360deg); transform: rotate(360deg);}
 } 
-/*
    .glowing span{
     position:relative;
     top: clac(80px*var(--i));
@@ -347,13 +344,13 @@ nav {
   
    }
    
+*/
 
-   
-
+/*----------------------------------------- GLow Section-----------------------------------------------------*/
   .glow {
  position: relative;
     height: 100vh;
-    width: 100vh;
+    width: auto;
     background: linear-gradient(to left, transparent 50%, rgba(0, 255, 255, 0.1) 80%, transparent 100%);
     margin-right: 10px;
     background-color: #0c0101;
@@ -361,9 +358,6 @@ nav {
     overflow: hidden;
     z-index: 1; 
   }
-
-  */
-
   .glow::before {
    content: "";
     position: absolute;
@@ -371,11 +365,11 @@ nav {
     left: 0;
     width: 200%; 
     height: 100%;
-    background: linear-gradient(to left, #7604e802, #31a9513b, #230a4a59, #de7ed53e);
+    background: linear-gradient(to left, #505f306d, #0a66053b, #1f5a6159, #5e17573e);
     border-radius: 5px;
     pointer-events: none; 
     z-index: -1; 
-    animation: gradientAnimation 5s linear infinite; 
+    animation: gradientAnimation 10s linear infinite; 
   }
   @keyframes gradientAnimation {
     0% {
@@ -384,11 +378,9 @@ nav {
     100% {
       transform: translateX(-50%); 
     }
-  }*/
+  }
   /*----------------------------------------- About Section-----------------------------------------------------*/
-
-  
-  .about::before {
+  .about:before {
     content: "";
     position: absolute;
     top: 0;
@@ -407,7 +399,7 @@ nav {
       background-position: 0 0;
     }
   }
-  .about-text{
+  #about-text{
     width: 550px;
   }
   .main{
