--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@
  .navbar a {
  display: inline-block;
   font-size: 18px;
-  color: #fff;
   text-decoration: none;
   font-weight: 500;
   margin-left: 35px;
@@ -205,10 +204,11 @@ nav {
     margin-bottom: 40px;/*was 75 and 50*/
   }
   h3{
-    color: white;
     font-size: 25px;
     margin-bottom: 50px;
-  }
+    color:#96e6a1;
+    }
+  
   h4 {
     background: -webkit-linear-gradient(120deg, #f1f6e6 0%, #96e6a1 100%);
     -webkit-background-clip: text;
@@ -403,10 +403,10 @@ nav {
     }
   }
   #about-text{
-    width: 550px;
+    width: 500px;
+
   }
-  .main{
-    width: 1130px;
+  .main{    
    margin-top: 5%;
     max-width: 95%;
     margin: 0 auto;
@@ -432,8 +432,7 @@ nav {
   }
   .about-text p{
     color: white;
-  
-    line-height: 28px;
+    line-height: 25px;
     font-size: 18px;
     margin-bottom: 45px;
   }
@@ -445,7 +444,7 @@ nav {
     object-fit: cover; 
     margin-right: 80px;
     margin-top: 5%;
-    box-shadow: 0 0 20px #ffaefb;
+    box-shadow: 0 0 10px #02FEE4;
     transition: background-color 0.3s, transform 0.3s;
     animation: glow 2s infinite alternate; 
    
@@ -456,14 +455,78 @@ nav {
   }
   @keyframes glow {
     0% {
-      box-shadow: 0 0 20px #ffaefb;
+      box-shadow: 0 0 40px #96e6a1;
     }
     100% {
-      box-shadow: 0 0 40px #ffaefb; /* Change shadow intensity as needed */
+      box-shadow: 0 0 40px #ade488; /* Change shadow intensity as needed */
     }
   }
+/*------------------------------------------Skills Section----------------------------------------------------------------------------------*/
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 50px;
+  padding-top: 100px;
+  padding-left: 10%;
 
-  /*------------------------------------------Projects Section-----------------------------------------------------*/
+}
+
+.skill {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1s forwards;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.skill:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.skill:nth-child(2) {
+  animation-delay: 1s;
+}
+
+.skill:nth-child(3) {
+  animation-delay: 2s;
+}
+
+.skill:nth-child(4) {
+  animation-delay: 3s;
+}
+
+.skill:nth-child(5) {
+  animation-delay: 4s;
+}
+
+.skills {
+  animation: infiniteLoop 5s infinite;
+}
+
+@keyframes infiniteLoop {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+  /*------------------------------------------Projects Section------------------------------------------------------------------------------*/
   
     .projects {
       position: relative;
@@ -472,17 +535,6 @@ nav {
       font-family: 'Open Sans', sans-serif;
       overflow: hidden;
     }
-  /*
-    .projects::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.3;
-      animation: gradientAnimationProjects 5s linear infinite;
-    }*/
     .max-width {
       max-width: 1300px;
       padding: 0 80px;
@@ -498,8 +550,8 @@ nav {
     }
   
     .project-image {
-      width: 100%;
-      height: auto;
+      width: auto;
+      max-height: 200px;
       margin-bottom: 20px;
     }
   
@@ -513,20 +565,17 @@ nav {
      width: calc(30% - 40px);
       margin: 20px;
       padding: 20px;
-      box-shadow: 2px 2px 10px #1b9753d3;
+      box-shadow: 2px 2px 20px #1b9753d3,0 0 10px #45da9e;
       border-radius: 10px;
       text-align: center;
       transition: 0.3s ease;
     }
-  
     .project-container:hover,
     .project-container:focus {
-      box-shadow: 2px 2px 30px #0668a1, 0 0 10px #ffaefb;
+      box-shadow: 2px 2px 30px #d405ae, 0 0 10px #ffaefb;
       transform: translateY(-0.75em) scale(1.05);
-      
       border: 3px solid rgb(238, 176, 230);
     }
- 
     .project-link {
       text-decoration: none;
     }  
@@ -535,24 +584,13 @@ nav {
       font-weight: bold;
       font-family: 'Times New Roman', Times, serif;
     }
-  
-    .container {
-      border-radius: 20px;
-      background-color: #dbe9fa;
-      padding: 20px;
-      width: 70%;
-      margin: auto;
-      box-shadow: 0 0 20px rgb(0, 34, 255), 0 0 30px #0ef, 0 0 40px #0ef;
-      margin: 50px 0 0 0;
-    }
     .max-width {
       max-width: 1300px;
       padding: 0 80px;
       margin: auto;
       border-radius: 40px;
     }
-
-  /*------------------------------------------Footer Section-----------------------------------------------------*/
+  /*------------------------------------------Footer Section-----------------------------------------------------------------------------------------*/
     footer {
       position: relative;
       
@@ -562,31 +600,26 @@ nav {
       align-items: center;
       justify-content: center;
       padding: 10px; 
-      text-align: center;
-     
-    }
-        
+      text-align: center; 
+    }       
     footer p:nth-child(1) {
       font-size: 30px;
       font-weight: bold;
     }
-  
     footer p:nth-child(2) {
       font-size: 17px;
       width: 500px;
       text-align: center;
       line-height: 26px;
     }
-  
     .contact-info {
       font-size: 2px;
       margin-top: auto;
     }
-  
     .contact-info span {
       font-weight: bold;
     }
-  
+
     /* Social Media Icons ---------------------------------------------------------------------------------------------*/
     .social {
       display: flex;
@@ -759,5 +792,53 @@ nav {
     100% {
       height: 150px;
       top: 45%;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+   
+    nav ul {
+      display: none;
+    }
+    nav {
+      justify-content: space-between;
+    }
+    .logo {
+      margin-left: 10px;
+    }
+    .left {
+      text-align: center;
+    }
+    .right {
+      display: none;
+    }
+    .about {
+      text-align: center;
+    }
+    .main {
+      flex-direction: column;
+    }
+    .about-text {
+      margin-top: 20px;
+    }
+    .project {
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+    .project-container {
+      margin-bottom: 30px;
+    }
+    .project-image {
+      width: 100%;
+    }
+    .btn {
+      margin-top: 10px;
+    }
+    .welcome-message {
+      text-align: center;
+    }
+    .contact-info {
+      text-align: center;
+    }
+    .social {
+      justify-content: center;
     }
   }
