removed extra <div>from still section

--- a/style.css
+++ b/style.css
@@ -420,7 +420,6 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: "Labrada", serif;
   }
   .about-text h2{
     color: white;
@@ -472,9 +471,8 @@ nav {
 .skills {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-end;
   margin-top: 50px;
-
   padding-left: 10%;
  
 }
