--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ nav {
   .glow {
  position: relative;
     height: 100vh;
-    width: auto;
+    width:100%;
     background: linear-gradient(to left, transparent 50%, rgba(0, 255, 255, 0.1) 80%, transparent 100%);
     margin-right: 10px;
     background-color: #0c0101;
@@ -410,22 +410,23 @@ nav {
       background-position: 0 0;
     }
   }
-  #about-text{
-    width: 600px;
+  .about-text{
+ width: 100%;
 
   }
+  
   .main{    
     min-height: 100vh;
    margin-top: 5%;
-    max-width: 90%;
+   width: 90%;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
   }
   .about-text h2{
     color: white;
-   font-size: 2em;
+   font-size: 1.75em;
     margin-bottom: 20px;
   }
   h5 {
@@ -440,6 +441,7 @@ nav {
     line-height: 25px;
     font-size: 1.2em;
     margin-bottom: 45px;
+    width: auto;
   }
   /*Image------------------------------------------------------------------------------------------------------------------------------*/
   .about img {
@@ -472,14 +474,15 @@ nav {
   flex-wrap: wrap;
   justify-content: flex-end;
   margin-top: 50px;
-  padding-left: 20%;
+  gap: 20px;
  
 }
 
 .skill {
   opacity: 0;
   transform: translateY(10px);
-  animation: fadeInUp 1s forwards;
+  animation: fadeInUp 1s forwards;    
+
 }
 
 @keyframes fadeInUp {
@@ -812,8 +815,8 @@ nav {
       flex-wrap: wrap;
       justify-content:space-around;
       padding-left: 0 ;
-  
     }
+  
     .left {
       text-align: center;
     }
